# ecs-game-architecture

./: CMakeLists.txt  ECS_USAGE_GUIDE.md  README.md
src/: main.cpp
src/demo/: README.md  components.hpp  main.cpp  simple_example.cpp  systems.hpp
src/ecs/: component.hpp  entity.hpp  system.hpp  world.hpp
