cmake_minimum_required(VERSION 3.20)
project(ecs)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(raylib REQUIRED)   # Raylib library required

set(
    SOURCES
    src/main.cpp
)

add_executable(
    ${PROJECT_NAME}
    ${SOURCES}
)

target_include_directories(
    ${PROJECT_NAME} 
    PUBLIC 
    ${CMAKE_CURRENT_LIST_DIR}/src
)

target_link_libraries(
    ${PROJECT_NAME} 
    raylib
)
